--- a/pages/javascript/intro/lesson1.mdx
+++ b/pages/javascript/intro/lesson1.mdx
@@ -94,23 +94,24 @@ program mobile applications, desktop applications, and even small robots!
 When it was first released, JavaScript wasn't the only scripting language used
 in web browsers. Many browsers competed with each other to become the one
 browser to rule them all, in an era known as the browser wars. Along with this
-came different scriting languages with varying syntax and rules.
+came different scriting languages with varying syntax and ways of interacting with
+their respective web browsers.
 
-This required developers to either write separate versions of their
-applications for each different browser, or to pick only one or two browsers
+Theses differences made it so that developers had to either write separate versions
+of their applications for each different browser, or to pick only one or two browsers
 to run their apps. This lead to a horrible developer and user experience, thus the
 creation of _ECMAScript language specification_.
 
 Created by European Computer Manufacturers Association (ECMA), the ECMAScript
 language specification was used to standardize the languages browsers used.
 JavaScript was used as the basis of this specification, and this eventually
-led to the wide adoption of JavaScript in pretty much all web browsers. ECMA
-also releases newer versions of ECMAScript regularly. ES5 is mostly used to refer
-to versions of the language released before 2015, and ES6 is generally used for
-versions after 2015.
+led to the wide adoption of JavaScript in almost all web browsers. ECMA regularly
+releases updates to ECMAScript which, after a rigorous approval process, eventually
+ends up getting impletmented into web browsers as JavaScript.
 
-In short, anytime you hear _ECMAScript_, JavaScript, ES, or JS, they all
-refer to the same language.
+You'll hear these different versions referenced by different names. ES5 (ECMAScript version 5)
+will generally refer to the version of JavaScript used before 2015, and ES6 for
+implementations of JavaScript used 2015 and onwards.
 
 #### Summary
 
