scratch whack-a-mole lesson10

--- a/pages/scratch/whack-a-mole-videos/lesson11.mdx
+++ b/pages/scratch/whack-a-mole-videos/lesson11.mdx
@@ -1,16 +1,15 @@
 import Layout from '../../../components/Layout/MDXLayout'
+import YouTubeEmbed from '../../../components/YouTubeEmbed'
 
-# Whack-a-Mole
+# Whack-a-mole
 
-##### Lesson #6
+##### Lesson #11
 
-#### Hide our Sprite
+#### Challenge: Random Block
 
 ---
 
-Now we need to hide our sprite when we click! We can do this using the "hide" block.
-
-![Adding a new sprite](/static/pages/scratch/whack-a-mole/lesson11.gif)
+<YouTubeEmbed videoId="phzXI9yGRTU" />
 
 export default ({ children }) => (
   <Layout
