--- a/pages/scratch/whack-a-mole-videos/lesson2.mdx
+++ b/pages/scratch/whack-a-mole-videos/lesson2.mdx
@@ -1,22 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-import YouTubeEmbed from '../../../components/YouTubeEmbed'
-
-# Whack-a-mole
-
-##### Lesson #2
-
-#### Challenge: Add a Sprite and Backdrop
-
----
-
-<YouTubeEmbed videoId="qpCy2YqG3T4" />
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole-videos/lesson1"
-    next="/scratch/whack-a-mole-videos/lesson3"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Add a Sprite and a Backdrop"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="qpCy2YqG3T4"
+  />
 )
