--- a/pages/scratch/whack-a-mole-videos/lesson26.mdx
+++ b/pages/scratch/whack-a-mole-videos/lesson26.mdx
@@ -4,9 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Whack-A-Mole"
-    lessonName="Intro"
+    lessonName="Go To Front"
     path={useRouter().pathname}
+    showPrev
     showNext
-    videoId="Os0Yj3f8YRc"
+    videoId="FbvU0wSE70A"
   />
 )
