--- a/pages/scratch/whack-a-mole-videos/lesson3.mdx
+++ b/pages/scratch/whack-a-mole-videos/lesson3.mdx
@@ -1,22 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-import YouTubeEmbed from '../../../components/YouTubeEmbed'
-
-# Whack-a-mole
-
-##### Lesson #3
-
-#### Challenge: When This Sprite Clicked Block
-
----
-
-<YouTubeEmbed videoId="3LgDzLo5kAk" />
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole-videos/lesson2"
-    next="/scratch/whack-a-mole-videos/lesson4"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="When This Sprite Clicked Block"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="3LgDzLo5kAk"
+  />
 )
