--- a/pages/scratch/whack-a-mole-videos/lesson4.mdx
+++ b/pages/scratch/whack-a-mole-videos/lesson4.mdx
@@ -1,22 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-import YouTubeEmbed from '../../../components/YouTubeEmbed'
-
-# Whack-a-mole
-
-##### Lesson #4
-
-#### Challenge: Add Sound
-
----
-
-<YouTubeEmbed videoId="Bi9AmyI4gRc" />
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole-videos/lesson3"
-    next="/scratch/whack-a-mole-videos/lesson5"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Add Sound"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="Bi9AmyI4gRc"
+  />
 )
