--- a/pages/scratch/whack-a-mole-videos/lesson7.mdx
+++ b/pages/scratch/whack-a-mole-videos/lesson7.mdx
@@ -1,22 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-import YouTubeEmbed from '../../../components/YouTubeEmbed'
-
-# Whack-a-mole
-
-##### Lesson #7
-
-#### Challenge: Change Variable
-
----
-
-<YouTubeEmbed videoId="KW46syX6jy4" />
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole-videos/lesson6"
-    next="/scratch/whack-a-mole-videos/lesson8"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Change Variable"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="KW46syX6jy4"
+  />
 )
