--- a/pages/scratch/whack-a-mole-videos/lesson9.mdx
+++ b/pages/scratch/whack-a-mole-videos/lesson9.mdx
@@ -1,22 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-import YouTubeEmbed from '../../../components/YouTubeEmbed'
-
-# Whack-a-mole
-
-##### Lesson #9
-
-#### Challenge: Wait Block
-
----
-
-<YouTubeEmbed videoId="TWcGH9U8KB8" />
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole-videos/lesson8"
-    next="/scratch/whack-a-mole-videos/lesson10"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Wait Block"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="TWcGH9U8KB8"
+  />
 )
