--- a/pages/scratch/whack-a-mole/lesson1.mdx
+++ b/pages/scratch/whack-a-mole/lesson1.mdx
@@ -1,16 +1,12 @@
-import Layout from '../../../components/Layout/MDXLayout'
-import YouTubeEmbed from '../../../components/YouTubeEmbed'
-
-# Whack-a-mole
-
-##### Lesson #1
-
-#### Intro
-
----
-
-<YouTubeEmbed videoId="Os0Yj3f8YRc" />
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout next="/scratch/whack-a-mole/lesson2">{children}</Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Intro"
+    path={useRouter().pathname}
+    showNext
+    videoId="Os0Yj3f8YRc"
+  />
 )
