--- a/pages/scratch/whack-a-mole/lesson10.mdx
+++ b/pages/scratch/whack-a-mole/lesson10.mdx
@@ -1,24 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-
-# Whack-a-Mole
-
-##### Lesson #10
-
-#### Use our Variable
-
----
-
-We want our score to go up everytime we click on our sprite! Lets get a "change"
-block for our variable!
-
-![Adding a new sprite](/static/pages/scratch/whack-a-mole/lesson10.gif)
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole/lesson9"
-    next="/scratch/whack-a-mole/lesson11"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Show Sprite"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="G-vBMH_wNr8"
+  />
 )
