--- a/pages/scratch/whack-a-mole/lesson11.mdx
+++ b/pages/scratch/whack-a-mole/lesson11.mdx
@@ -1,23 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-
-# Whack-a-Mole
-
-##### Lesson #6
-
-#### Hide our Sprite
-
----
-
-Now we need to hide our sprite when we click! We can do this using the "hide" block.
-
-![Adding a new sprite](/static/pages/scratch/whack-a-mole/lesson11.gif)
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole/lesson10"
-    next="/scratch/whack-a-mole/lesson12"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Random Block"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="phzXI9yGRTU"
+  />
 )
