--- a/pages/scratch/whack-a-mole/lesson2.mdx
+++ b/pages/scratch/whack-a-mole/lesson2.mdx
@@ -1,24 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-
-# Whack-a-Mole
-
-##### Lesson #2
-
-#### Deleting Scratch
-
----
-
-We first need to delete scratch from our game so we can create our own sprite.
-Click the trash-can icon thats on _sprite1_.
-
-![Deleting Scratch sprite](/static/pages/scratch/whack-a-mole/lesson2.gif)
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole/lesson1#title"
-    next="/scratch/whack-a-mole/lesson3#title"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Add a Sprite and a Backdrop"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="qpCy2YqG3T4"
+  />
 )
