--- a/pages/scratch/whack-a-mole/lesson3.mdx
+++ b/pages/scratch/whack-a-mole/lesson3.mdx
@@ -1,24 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-
-# Whack-a-Mole
-
-##### Lesson #3
-
-#### Adding Backdrop
-
----
-
-Lets add a backdrop to our game!
-Click the backdrop icon on the bottom right of the screen and pick any backdrop you want.
-
-![Adding a backdrop](/static/pages/scratch/whack-a-mole/lesson3.gif)
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole/lesson2#title"
-    next="/scratch/whack-a-mole/lesson4#title"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="When This Sprite Clicked Block"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="3LgDzLo5kAk"
+  />
 )
