--- a/pages/scratch/whack-a-mole/lesson5.mdx
+++ b/pages/scratch/whack-a-mole/lesson5.mdx
@@ -1,24 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-
-# Whack-a-Mole
-
-##### Lesson #5
-
-#### When this Sprite Clicked
-
----
-
-In Whack-a-Mole we need to be able to click our sprite! Lets add the
-"when this sprite clicked" block to our game!
-
-![Adding a new sprite](/static/pages/scratch/whack-a-mole/lesson5.gif)
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole/lesson4"
-    next="/scratch/whack-a-mole/lesson6"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Sound Library"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="Q3swkGTQLSc"
+  />
 )
