--- a/pages/scratch/whack-a-mole/lesson7.mdx
+++ b/pages/scratch/whack-a-mole/lesson7.mdx
@@ -1,24 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-
-# Whack-a-Mole
-
-##### Lesson #7
-
-#### Sound Library
-
----
-
-Scratch comes with a lot of sounds! Lets go into their sound library and pick
-a new sound we can use in our game.
-
-![Adding a new sprite](/static/pages/scratch/whack-a-mole/lesson7.gif)
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole/lesson6"
-    next="/scratch/whack-a-mole/lesson8"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Change Variable"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="KW46syX6jy4"
+  />
 )
