--- a/pages/scratch/whack-a-mole/lesson8.mdx
+++ b/pages/scratch/whack-a-mole/lesson8.mdx
@@ -1,24 +1,13 @@
-import Layout from '../../../components/Layout/MDXLayout'
-
-# Whack-a-Mole
-
-##### Lesson #8
-
-#### Changing Sound
-
----
-
-We need to tell our game to use the sound we just picked. Lets change the "start sound"
-block so we can do that!
-
-![Adding a new sprite](/static/pages/scratch/whack-a-mole/lesson8.gif)
+import YouTubeLayout from '../../../components/Layout/YouTubeLayout'
+import { useRouter } from 'next/router'
 
 export default ({ children }) => (
-  <Layout
-    noNav
-    prev="/scratch/whack-a-mole/lesson7"
-    next="/scratch/whack-a-mole/lesson9"
-  >
-    {children}
-  </Layout>
+  <YouTubeLayout
+    courseName="Whack-A-Mole"
+    lessonName="Hide Sprite"
+    path={useRouter().pathname}
+    showPrev
+    showNext
+    videoId="-_zVp_QvUzo"
+  />
 )
