update npm packages

--- a/pages/javascript/intro/lesson1.mdx
+++ b/pages/javascript/intro/lesson1.mdx
@@ -31,7 +31,7 @@ computers understand **binary** code, similar to the code below:
 ```
 
 The first computers actually would represent these binary values using
-thousands of tiny lightbulbs with "0" representing the light being off, and
+thousands of tiny light bulbs with "0" representing the light being off, and
 "1" representing the light being on. Improvements in technology has made it so
 that we can store and calculate trillions of these zeros and ones within
 seconds.
@@ -88,13 +88,12 @@ program mobile applications, desktop applications, and even small robots!
   installed directly onto desktops and phones. All versions are built with
   JavaScript.
 </figure>
-
 <h3 id="ecmascript">ECMAScript?</h3>
 
 When it was first released, JavaScript wasn't the only scripting language used
 in web browsers. Many browsers competed with each other to become the one
 browser to rule them all, in an era known as the browser wars. Along with this
-came different scriting languages with varying syntax and ways of interacting with
+came different scripting languages with varying syntax and ways of interacting with
 their respective web browsers.
 
 Theses differences made it so that developers had to either write separate versions
@@ -107,7 +106,7 @@ language specification was used to standardize the languages browsers used.
 JavaScript was used as the basis of this specification, and this eventually
 led to the wide adoption of JavaScript in almost all web browsers. ECMA regularly
 releases updates to ECMAScript which, after a rigorous approval process, eventually
-ends up getting impletmented into web browsers as JavaScript.
+ends up getting implemented into web browsers as JavaScript.
 
 You'll hear these different versions referenced by different names. ES5 (ECMAScript version 5)
 will generally refer to the version of JavaScript used before 2015, and ES6 for
@@ -116,7 +115,7 @@ implementations of JavaScript used 2015 and onwards.
 #### Summary
 
 - Programming languages let us give computers instructions in a human-readable way
-- JavaScript is the most widely used language, and has been adpoted on platforms outside of just web browsers
+- JavaScript is the most widely used language, and has been adopted on platforms outside of just web browsers
 - ECMAScript is the formal name of the JavaScript language, and is being constantly updated by the people at ECMA.
 
 export default ({ children }) => (
