--- a/pages/javascript/intro/lesson2.mdx
+++ b/pages/javascript/intro/lesson2.mdx
@@ -14,7 +14,7 @@ import Layout from '../../../components/Layout/MDXLayout'
 <h3 id="dev-env">Setting Up Your Developer Environment</h3>
 
 For these lessons, we will be using <a href="https://repl.it">repl.it</a>,
-a powerful and simple _integreated developer environment_ (IDE). Not only
+a powerful and simple _integrated developer environment_ (IDE). Not only
 can we create our files and write some code and run it, but it also gives us neat
 features like auto-complete, code highlighting, and find-replace functions.
 
@@ -23,7 +23,7 @@ features like auto-complete, code highlighting, and find-replace functions.
   <a href="https://repl.it/signup">HERE</a>!
 </figure>
 
-![repl.it signup page](/static/pages/javascript/intro/repl-login-page.png)
+![repl.it sign-up page](/static/pages/javascript/intro/repl-login-page.png)
 
 <figure>
   Once you're done, you should be able to see a big blue button at the top of
