--- a/pages/javascript/trexgame/lesson1.mdx
+++ b/pages/javascript/trexgame/lesson1.mdx
@@ -39,12 +39,12 @@ project. Feel free to sign-in/sign-up as well!
 
 <figure>
   We'll want to open the sketch.js file since that's where we're going to be
-  writting all of our code.
+  writing all of our code.
 </figure>
 
 <h3 id="first-steps">First Steps</h3>
 
-Lets quickly make sure that all the files in our project are working properlly.
+Lets quickly make sure that all the files in our project are working properly.
 Lets add some code to our **setup** and **draw** functions.
 
 ```js
