--- a/pages/javascript/trexgame/lesson2.mdx
+++ b/pages/javascript/trexgame/lesson2.mdx
@@ -36,7 +36,7 @@ const dino = {
 Lets create a new function called **drawDino**, that lets us draw our dinosaur
 onto the screen. We'll want to start by drawing our player as a simple
 ellipse, so we can get our game logic working first, before we worry about
-adding image sprites, animations, or other cosemtics. Write this function
+adding image sprites, animations, or other cosmetics. Write this function
 under both your draw and setup functions.
 
 ```js
@@ -90,8 +90,8 @@ const horizon = {
 ```
 
 We want it to span the entire width of our canvas (**canvasWidth**),
-as well as be slighly above the bottom (**canvasHeight**). Remember
-that the y-axis is reveresed when drawing onto computer screens, which
+as well as be slightly above the bottom (**canvasHeight**). Remember
+that the y-axis is reversed when drawing onto computer screens, which
 why we're subtracting 40.
 
 Next, we need to create our **drawHorizon** function at the bottom of
