--- a/pages/javascript/trexgame/lesson4.mdx
+++ b/pages/javascript/trexgame/lesson4.mdx
@@ -10,7 +10,7 @@ import Layout from '../../../components/Layout/MDXLayout'
 
 1. [Pausing](#pausing)
 2. [Collisions](#collision)
-3. [Obstacale Types](#types)
+3. [Obstacle Types](#types)
 
 <h3 id="pausing">Pausing</h3>
 
