feature: finished adding scary-maze lessons

--- a/pages/scratch/scary-maze/lesson15.mdx
+++ b/pages/scratch/scary-maze/lesson15.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="If touching color"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="oaZfB07eFow"
   />
 )
