--- a/pages/scratch/scary-maze/lesson16.mdx
+++ b/pages/scratch/scary-maze/lesson16.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="Change level by 1 then broadcast load level"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="2TUHIBskAuk"
   />
 )
