--- a/pages/scratch/scary-maze/lesson18.mdx
+++ b/pages/scratch/scary-maze/lesson18.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="Hide and Show"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="ey9Ol0WQqyc"
   />
 )
