--- a/pages/scratch/scary-maze/lesson20.mdx
+++ b/pages/scratch/scary-maze/lesson20.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="Level 2 logic"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="u2uUNr68eSE"
   />
 )
