--- a/pages/scratch/scary-maze/lesson24.mdx
+++ b/pages/scratch/scary-maze/lesson24.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="If touching black, set level to game over"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="Xg6mAnVFP4E"
   />
 )
