--- a/pages/scratch/scary-maze/lesson9.mdx
+++ b/pages/scratch/scary-maze/lesson9.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Level 2 Backdrop"
+    lessonName="Create Level 3 Backdrop"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="t9t5Q2MlJ2U"
+    videoId="h9yU4FMay4M"
   />
 )
