--- a/pages/scratch/scary-maze/lesson12.mdx
+++ b/pages/scratch/scary-maze/lesson12.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="Broadcast and Receive Message"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="Givmhx8EiF0"
   />
 )
