--- a/pages/scratch/scary-maze/lesson14.mdx
+++ b/pages/scratch/scary-maze/lesson14.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="Duplicate and customize level code"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="ZE0MmMJlztY"
   />
 )
