--- a/pages/scratch/scary-maze/lesson17.mdx
+++ b/pages/scratch/scary-maze/lesson17.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="Go to X and Y"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="64no2eUlVnk"
   />
 )
