--- a/pages/scratch/scary-maze/lesson25.mdx
+++ b/pages/scratch/scary-maze/lesson25.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="If touching black and level 3"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="3Zn_ETCzDPA"
   />
 )
