--- a/pages/scratch/scary-maze/lesson27.mdx
+++ b/pages/scratch/scary-maze/lesson27.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="Challenge - Add Sound"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="t4Xwx1FHEQg"
   />
 )
