--- a/pages/scratch/scary-maze/lesson30.mdx
+++ b/pages/scratch/scary-maze/lesson30.mdx
@@ -4,10 +4,10 @@ import { useRouter } from 'next/router'
 export default ({ children }) => (
   <YouTubeLayout
     courseName="Scary Maze"
-    lessonName="Create Game Over 'Scary Face'"
+    lessonName="Name and Share!"
     path={useRouter().pathname}
     showPrev
     showNext
-    videoId="YQGPOzXtT5Y"
+    videoId="8w3-7qMbMAY"
   />
 )
