feature: pong lesson 13

--- a/pages/scratch/pong/lesson1.mdx
+++ b/pages/scratch/pong/lesson1.mdx
@@ -3,10 +3,10 @@ import { useRouter } from 'next/router'
 
 export default ({ children }) => (
   <YouTubeLayout
-    courseName="Scary Maze"
-    lessonName="Name and Share!"
+    courseName="Pong"
+    lessonName="Intro"
     path={useRouter().pathname}
-    showPrev
-    videoId="8w3-7qMbMAY"
+    showNext
+    videoId="FccKo0m7COo"
   />
 )
