--- a/pages/scratch/pong/lesson11.mdx
+++ b/pages/scratch/pong/lesson11.mdx
@@ -3,10 +3,11 @@ import { useRouter } from 'next/router'
 
 export default ({ children }) => (
   <YouTubeLayout
-    courseName="Scary Maze"
-    lessonName="Name and Share!"
+    courseName="Pong"
+    lessonName="Go to Y: 0 X: 0"
     path={useRouter().pathname}
     showPrev
-    videoId="8w3-7qMbMAY"
+    showNext
+    videoId="AfdecXxbJV4"
   />
 )
