--- a/pages/scratch/pong/lesson4.mdx
+++ b/pages/scratch/pong/lesson4.mdx
@@ -3,10 +3,11 @@ import { useRouter } from 'next/router'
 
 export default ({ children }) => (
   <YouTubeLayout
-    courseName="Scary Maze"
-    lessonName="Name and Share!"
+    courseName="Pong"
+    lessonName="Draw and Name Paddle"
     path={useRouter().pathname}
     showPrev
-    videoId="8w3-7qMbMAY"
+    showNext
+    videoId="RdfBs_Z2C7g"
   />
 )
