--- a/pages/scratch/pong/lesson7.mdx
+++ b/pages/scratch/pong/lesson7.mdx
@@ -3,10 +3,11 @@ import { useRouter } from 'next/router'
 
 export default ({ children }) => (
   <YouTubeLayout
-    courseName="Scary Maze"
-    lessonName="Name and Share!"
+    courseName="Pong"
+    lessonName="Forever If Then"
     path={useRouter().pathname}
     showPrev
-    videoId="8w3-7qMbMAY"
+    showNext
+    videoId="yzXwAgU3pm4"
   />
 )
