--- a/pages/scratch/pong/lesson8.mdx
+++ b/pages/scratch/pong/lesson8.mdx
@@ -3,10 +3,11 @@ import { useRouter } from 'next/router'
 
 export default ({ children }) => (
   <YouTubeLayout
-    courseName="Scary Maze"
-    lessonName="Name and Share!"
+    courseName="Pong"
+    lessonName="If S Pressed Change Y Negative 10"
     path={useRouter().pathname}
     showPrev
-    videoId="8w3-7qMbMAY"
+    showNext
+    videoId="v50X2Kip-eQ"
   />
 )
