--- a/pages/scratch/pong/lesson9.mdx
+++ b/pages/scratch/pong/lesson9.mdx
@@ -3,10 +3,11 @@ import { useRouter } from 'next/router'
 
 export default ({ children }) => (
   <YouTubeLayout
-    courseName="Scary Maze"
-    lessonName="Name and Share!"
+    courseName="Pong"
+    lessonName="If W Pressed Change Y Positive 10"
     path={useRouter().pathname}
     showPrev
-    videoId="8w3-7qMbMAY"
+    showNext
+    videoId="PY9Uszs2Z_E"
   />
 )
